--- a/package.json
+++ b/package.json
@@ -5,17 +5,21 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "esbuild --bundle --minify --outfile=client/bundle.js client/sender.js",
-    "start": "node serve.js"
-  },
-  "devDependencies": {
-    "esbuild": "^0.8.5"
+    "build-client": "esbuild --bundle --minify --outfile=client/bundle.js client/sender.ts",
+    "build-server": "tsc ./server/serve.ts",
+    "build": "run-p build-client build-server",
+    "start": "node server/serve.js"
   },
   "dependencies": {
-    "koa": "^2.13.0",
-    "koa-static": "^5.0.0",
-    "sendkeys-macos": "^1.1.2",
-    "socket.io": "^3.0.1",
-    "socket.io-client": "^3.0.1"
+    "fastify": "^3.8.0",
+    "fastify-static": "^3.3.0",
+    "fastify-websocket": "^2.0.11",
+    "sendkeys-macos": "^1.1.2"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.7",
+    "esbuild": "^0.8.5",
+    "npm-run-all": "^4.1.5",
+    "typescript": "^4.0.5"
   }
 }
