--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "dependencies": {
     "fastify": "^3.8.0",
     "fastify-static": "^3.3.0",
-    "fastify-websocket": "^2.0.11",
-    "sendkeys-macos": "^1.1.2"
+    "fastify-websocket": "^2.0.11"
   },
   "devDependencies": {
     "@types/node": "^14.14.7",
