--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build-client": "esbuild --bundle --minify --outfile=client/bundle.js client/sender.ts",
+    "build-client": "esbuild --bundle --minify --outfile=client/bundle.js client/client.ts",
     "build-server": "tsc ./server/serve.ts",
     "build": "run-p build-client build-server",
     "start": "node server/serve.js"
@@ -13,7 +13,8 @@
   "dependencies": {
     "fastify": "^3.8.0",
     "fastify-static": "^3.3.0",
-    "fastify-websocket": "^2.0.11"
+    "fastify-websocket": "^2.0.11",
+    "rxjs": "^6.6.3"
   },
   "devDependencies": {
     "@types/node": "^14.14.7",
