--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build-client": "esbuild --bundle --minify --outfile=client/bundle.js client/client.ts",
     "build-server": "tsc ./server/serve.ts",
     "build": "run-p build-client build-server",
-    "start": "node server/serve.js"
+    "start": "node server/serve.js",
+    "lint": "eslint --ext .ts ./",
+    "format": "eslint --fix --ext .ts ./"
   },
   "dependencies": {
     "fastify": "^3.8.0",
@@ -18,8 +20,15 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.7",
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
     "esbuild": "^0.8.5",
+    "eslint": "^7.13.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-simple-import-sort": "^5.0.3",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.1.2",
     "typescript": "^4.0.5"
   }
 }
