--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "run-p build-client build-server",
     "start": "node server/serve.js",
     "lint": "eslint --ext .ts ./",
-    "format": "eslint --fix --ext .ts ./"
+    "format": "eslint --fix --ext .ts ./",
+    "test": "jest"
   },
   "dependencies": {
     "fastify": "^3.8.0",
@@ -19,6 +20,7 @@
     "rxjs": "^6.6.3"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.15",
     "@types/node": "^14.14.7",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
@@ -27,8 +29,11 @@
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-simple-import-sort": "^5.0.3",
+    "jest": "^26.6.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.1.2",
+    "ts-jest": "^26.4.4",
+    "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   }
 }
