--- a/server-rs/Cargo.toml
+++ b/server-rs/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = "2.33.3"
 base64 = "0.13.0"
 regex = "1.4.2"
 sha-1 = "0.9.2"
