--- a/package.json
+++ b/package.json
@@ -5,18 +5,12 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build-client": "esbuild --bundle --minify --outfile=client/bundle.js client/client.ts",
-    "build-server": "tsc ./server/serve.ts",
-    "build": "run-p build-client build-server",
-    "start": "node server/serve.js",
+    "build": "esbuild --bundle --minify --outfile=client/bundle.js client/client.ts",
     "lint": "eslint --ext .ts ./",
     "format": "eslint --fix --ext .ts ./",
     "test": "jest"
   },
   "dependencies": {
-    "fastify": "^3.8.0",
-    "fastify-static": "^3.3.0",
-    "fastify-websocket": "^2.0.11",
     "rxjs": "^6.6.3"
   },
   "devDependencies": {
