--- a/server-rs/Cargo.toml
+++ b/server-rs/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
-name = "server"
+name = "sendkeys-server"
+description = "StaticFile / WebSocket server implementation for executing sendkeys command every time it receives WebSocket message"
 version = "0.1.0"
 authors = ["0918nobita <nobita.0918@gmail.com>"]
 edition = "2018"
